--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
             </div>
             <div class="col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                    src="images/dark85.jpg" alt="85% DARK CHOCOLATE">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/dark85.jpg"
+                        alt="85% DARK CHOCOLATE">
                     <div class="media-body">
-                    <h2 class="mt-0">85% DARK CHOCOLATE</h2>
-                    <p class="col d-none d-md-block">Dark chocolate with no added sugar.
-                    Here you can taste the flavor of cocoa beans.</p>
+                        <h2 class="mt-0">85% DARK CHOCOLATE</h2>
+                        <span class="badge badge-danger">HOT</span>
+                        <span class="badge badge-pill badge-success">$0.99</span>
+                        <p class="col d-none d-md-block">Dark chocolate with no added sugar.
+                            Here you can taste the flavor of cocoa beans.</p>
                     </div>
-                    </div>
+                </div>
             </div>
         </div>
 
@@ -85,16 +87,16 @@
             </div>
             <div class="col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                    src="images/cartoonVasilis.png" alt="Vasilis Wilson">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/cartoonVasilis.png"
+                        alt="Vasilis Wilson">
                     <div class="media-body">
-                    <h2 class="mt-0">Vasilis Wilson</h2>
-                    <h4>Sous-chef</h4>
-                    <p class="col d-none d-md-block">Vasilis is well informed of all the current
-                    trends in pastry and contributes his innovative ideas in our products.</p>
+                        <h2 class="mt-0">Vasilis Wilson</h2>
+                        <h4>Sous-chef</h4>
+                        <p class="col d-none d-md-block">Vasilis is well informed of all the current
+                            trends in pastry and contributes his innovative ideas in our products.</p>
                     </div>
-                    </div>
-               
+                </div>
+
             </div>
         </div>
     </div>
