--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,8 @@
                                 class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
+                                class="fa fa-address-card fa-lg"></span>
                             Contact</a></li>
                 </ul>
             </div>
@@ -39,6 +40,7 @@
     </nav>
     <header class="jumbotron">
         <div class="container">
+
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
@@ -51,8 +53,14 @@
             </div>
         </div>
     </header>
-    <nav aria-label="breadcrumb"></nav>
+
     <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">About us</li>
+            </ol>
+        </nav>
         <div class="row">
             <div class="col-12">
                 <h3>About Us</h3>
@@ -157,10 +165,10 @@
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5">
