Sotiris final site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                             Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
                                 class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span>
+                            Menu</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span>
@@ -198,7 +199,6 @@
     </header>
 
     <div class="container">
-
         <div class="row row-content">
             <div class="col-12">
                 <div id="mycarousel" class="carousel slide" data-ride="carousel">
