--- a/contactus.html
+++ b/contactus.html
@@ -27,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item "><a class="nav-link" href="./index.html">
                             <span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html">
@@ -37,10 +37,56 @@
                     <li class="nav-item active"><a class="nav-link" href="#">
                             <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in fa-lg"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
-
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email
+                                address
+                            </label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">
+                                Password
+                            </label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
+                                placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox">
+                                Remember me
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Sign in
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -55,7 +101,7 @@
             </div>
         </div>
     </header>
-    
+
 
     <div class="container">
         <nav aria-label="breadcrumb">
@@ -78,10 +124,10 @@
             </div>
             <div class="col-12 col-sm-4 offset-sm-1">
                 <h5>Our Address</h5>
-                <address style="font-size: 100%">
-                    121, Clear Wave Road<br>
-                    Clear Wave Road, Aloha<br>
-                    HAWAII<br>
+                <address>
+                    <span class="fa fa-address-card fa-lg"></span> 121, Clear Wave Road<br>
+                        Clear Wave Road, Aloha<br>
+                        HAWAII<br>
                     <i class="fa fa-phone"></i>: +987 6543 2100<br>
                     <i class="fa fa-fax"></i>: +987 6543 2101<br>
                     <i class="fa fa-envelope"></i>:
@@ -191,12 +237,12 @@
                 <div class="col-6 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-                        121, Clear Wave Road<br>
+                        <span class="fa fa-address-card fa-lg"></span> 121, Clear Wave Road<br>
                         Clear Wave Road, Aloha<br>
                         HAWAII<br>
-                        <i class="fa fa-phone fa-lg"></i>: +987 6543 2100<br>
-                        <i class="fa fa-fax fa-lg"></i>: +987 6543 2101<br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a
+                        <i class="fa fa-phone fa-lg"></i> +987 6543 2100<br>
+                        <i class="fa fa-fax fa-lg"></i> +987 6543 2101<br>
+                        <i class="fa fa-envelope fa-lg"></i> <a
                             href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
                     </address>
                 </div>
@@ -219,7 +265,9 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p>&copy; Copyright 2018 Le Chocolat</p>
+                    <p>Copyright &copy;
+                        <script>document.write(new Date().getFullYear())</script> Le Chocolat
+                    </p>
                 </div>
             </div>
         </div>
