--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                                 class="fa fa-address-card fa-lg"></span>
                             Contact</a></li>
                 </ul>
-                <span class="navbar-text">
+
+                <li class="navbar-text">
                     <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span> Login
+                        <span class="fa fa-sign-in fa-lg"></span> Login
                     </a>
-                </span>
+                </li>
             </div>
         </div>
     </nav>
@@ -229,7 +230,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <!--<div class="carousel-item">
                             <img src="images/cartoonVasilis.png" alt="Vasilis Wilson">
                             <div class="carousel-caption ">
                                 <h2>Vasilis Wilson
@@ -238,12 +239,12 @@
                                     trends in pastry and contributes his innovative ideas in our products.
                                 </p>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <ol class="carousel-indicators">
                         <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#mycarousel" data-slide-to="1"></li>
-                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                        <!-- <li data-target="#mycarousel" data-slide-to="2"></li> -->
                     </ol>
                     <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -367,7 +368,9 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p> &copy; Copyright 2018 Le Chocolat</p>
+                    <p>Copyright &copy;
+                        <script>document.write(new Date().getFullYear())</script> Le Chocolat
+                    </p>
                 </div>
             </div>
         </div>
