--- a/menu.html
+++ b/menu.html
@@ -24,27 +24,164 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
         <div class="container">
-            <a class="navbar-brand" href="./menu.html"><img src="images/logo.png" width="54"></a>
+            <a class="navbar-brand" href="./index.html"><img src="images/logo.png" width="54"></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="./index.html"><span
-                                class="fa fa-home fa-lg"></span> Home</a></li>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>
+                            Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
                                 class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>
+                            Menu</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span>
                             Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in fa-lg"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email
+                                address
+                            </label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">
+                                Password
+                            </label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
+                                placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox">
+                                Remember me
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Sign in
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve your baskets</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Number of baskets</label>
+                            <div class="col col-sm">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option1" id="inlineRadio1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option2" id="inlineRadio2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option3" id="inlineRadio3">
+                                    <label class="form-check-label" for="inlineRadio3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option4" id="inlineRadio4">
+                                    <label class="form-check-label" for="inlineRadio4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option5" id="inlineRadio5">
+                                    <label class="form-check-label" for="inlineRadio5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        value="option6" id="inlineRadio6">
+                                    <label class="form-check-label" for="inlineRadio6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Date and Time</label>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-calendar"></span>
+                                </div>
+                                <input type="date" class="form-control" name="myDate">
+
+                            </div>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-clock-o"></span>
+                                </div>
+                                <input type="time" class="form-control" name="myTime">
+
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Home Delivery</label>
+                            <div class="col-12 col-sm-3 btn-group">
+                                <label class="btn btn-success">
+                                    <input id="radioYes" type="radio" name="aaa" value="yes" checked>
+                                    Yes
+                                </label>
+
+                                <label class="btn btn-danger">
+                                    <input id="radioNo" type="radio" name="aaa" value="no">
+                                    No
+                                </label>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Submit
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
 
@@ -334,12 +471,12 @@
                                         <p style="margin-left:20px; text-align:left">
 
                                             plant milk 170ml <br> <br>
-                                            vegan yogurt 190g  <br><br>
+                                            vegan yogurt 190g <br><br>
                                             apple cider vinegar 1 tsp <br><br>
                                             caster sugar 250g <br><br>
                                             vegetable oil 145g <br><br>
-                                            plain flour 220g  <br><br>
-                                            cocoa powder 100g  <br><br>
+                                            plain flour 220g <br><br>
+                                            cocoa powder 100g <br><br>
 
                                         </p>
                                     </div>
@@ -349,18 +486,23 @@
                                             Step 1 <br> <br>
                                             Heat the oven to 180C/fan 160C/gas 4. <br> <br>
                                             Step 2 <br> <br>
-                                            In a large measuring jug, mix together the plant milk, yogurt, apple cider vinegar, caster sugar, vegetable oil and vanilla bean paste. Set aside. <br> <br>
+                                            In a large measuring jug, mix together the plant milk, yogurt, apple cider
+                                            vinegar, caster sugar, vegetable oil and vanilla bean paste. Set aside. <br>
+                                            <br>
                                             Step 3 <br> <br>
-                                            In a large measuring jug, mix together the plant milk, yogurt, apple cider vinegar, caster sugar, vegetable oil and vanilla bean paste. Set aside.
+                                            In a large measuring jug, mix together the plant milk, yogurt, apple cider
+                                            vinegar, caster sugar, vegetable oil and vanilla bean paste. Set aside.
                                             <br> <br>
                                             Step 4 <br> <br>
                                             While the sponges are baking, make the buttercream. <br> <br>
                                             Step 5 <br> <br>
-                                            Tip the butter and margarine into a bowl and use electric beaters to beat until silky smooth. <br> <br>
+                                            Tip the butter and margarine into a bowl and use electric beaters to beat
+                                            until silky smooth. <br> <br>
                                             Step 6 <br> <br>
-                                            Add the cooled dark chocolate and beat well until you have a beautifully fluffy frosting. <br> <br>
+                                            Add the cooled dark chocolate and beat well until you have a beautifully
+                                            fluffy frosting. <br> <br>
                                             Step 7 <br> <br>
-                                            Frost the top of one sponge then top it with the second sponge. 
+                                            Frost the top of one sponge then top it with the second sponge.
                                         </p>
                                     </div>
                                 </div>
@@ -416,7 +558,9 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p>&copy; Copyright 2018 Le Chocolat</p>
+                    <p>Copyright &copy;
+                        <script>document.write(new Date().getFullYear())</script> Le Chocolat
+                    </p>
                 </div>
             </div>
         </div>
@@ -428,7 +572,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-    <!-- endbuild -->  
+    <!-- endbuild -->
 
 
 </body>
