--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="icon" href="images/logo2.jpg">
     <!-- endbuild -->
 
 
